--- a/src/site/slides/00_01/index.html
+++ b/src/site/slides/00_01/index.html
@@ -68,7 +68,7 @@
                       <i class="bi bi-file-text-fill me-2 lh-1" style="color: #8C6621;"></i>
                       <div class="d-flex flex-column lh-1">
                         <span class="fw-medium lh-1" style="color: #8C6621; font-size: .7em">01_01</span>
-                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">CodeSwing</span>
+                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">JSX</span>
                       </div>
                     </a>
                     <a class="flex-fill ms-3 text-end" style="color: #8C6621;" href="../../../?d=01_01&#">
@@ -291,15 +291,11 @@
           </aside>
         <main class="main col col-md-6 col-lg-8">
           <!-- .slide: data-state="layout-title" class="bg-dark"-->
-<h1 id="javascript-functions" tabindex="-1">JavaScript Functions <a class="direct-link" href="#javascript-functions"> </a></h1>
+<h1 id="hands-on-javascript" tabindex="-1">Hands-on JavaScript</h1>
 <blockquote>
 <blockquote></blockquote>
 </blockquote>
-<p>Humans are great at doing repetitive work, but they can't hold a candle to computers. And one of the best ways to tell a computer to execute a series of tasks is with functions.</p>
-<p>Hey there, this is Ray Villalobos, Senior Staff Instructor for LinkedIn Learning and I'm super excited to talk to you about JavaScript Functions.</p>
-<p>I would argue that JavaScript functions are the best part of the language. Functions allow you to expands what JavaScript can do.</p>
-<p>And after all, isn't making life easier why you became a computer programmer?</p>
-<p>So, I'm excited to show you what's possible with functions. Sounds simple enough, but as you'll find out, when it comes to functions, there's a lot of power, elegance and complexity...so, let's get started.</p>
+<p>The Quick Brown Fox Jumps Over The Lazy Dog</p>
 
         </main>
         <aside class="aside aside-supplemental col col-md-3 col-lg-2 d-none d-md-block">
@@ -308,7 +304,7 @@
             <div class="">
                 <ol>
                     
-                    <li><a href="#javascript-functions">JavaScript Functions</a>
+                    <li><a href="#hands-on-javascript">Hands-on JavaScript</a>
             		</li>
                 </ol>
             </div>
