--- a/src/site/slides/02_07/index.html
+++ b/src/site/slides/02_07/index.html
@@ -68,7 +68,7 @@
                       <i class="bi bi-file-text-fill me-2 lh-1" style="color: #8C6621;"></i>
                       <div class="d-flex flex-column lh-1">
                         <span class="fw-medium lh-1" style="color: #8C6621; font-size: .7em">01_01</span>
-                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">CodeSwing</span>
+                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">JSX</span>
                       </div>
                     </a>
                     <a class="flex-fill ms-3 text-end" style="color: #8C6621;" href="../../../?d=01_01&#">
@@ -291,10 +291,10 @@
           </aside>
         <main class="main col col-md-6 col-lg-8">
           <!-- .slide: data-state="layout-title" class="bg-dark"-->
-<h1 id="challenge" tabindex="-1">Challenge <a class="direct-link" href="#challenge"> </a></h1>
+<h1 id="challenge" tabindex="-1">Challenge</h1>
 <hr>
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
-<h1 id="challenge-1" tabindex="-1">Challenge <a class="direct-link" href="#challenge-1"> </a></h1>
+<h1 id="challenge-1" tabindex="-1">Challenge</h1>
 <ol>
 <li>Create social media navbar</li>
 <li>Read from external file</li>
