--- a/src/site/slides/index.html
+++ b/src/site/slides/index.html
@@ -68,7 +68,7 @@
                       <i class="bi bi-file-text-fill me-2 lh-1" style="color: #8C6621;"></i>
                       <div class="d-flex flex-column lh-1">
                         <span class="fw-medium lh-1" style="color: #8C6621; font-size: .7em">01_01</span>
-                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">CodeSwing</span>
+                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">JSX</span>
                       </div>
                     </a>
                     <a class="flex-fill ms-3 text-end" style="color: #8C6621;" href="../../../?d=01_01&#">
@@ -291,9 +291,9 @@
           </aside>
         <main class="main col col-md-6 col-lg-8">
           <!-- .slide: data-state="layout-title no-fragment"  -->
-<h1 id="javascript" tabindex="-1">JavaScript <a class="direct-link" href="#javascript"> </a></h1>
+<h1 id="javascript" tabindex="-1">JavaScript</h1>
 <p>Functions</p>
-<div class="btn btn-warning mt-3 ">raybo.org/slides_jsfunctions</div>
+<div class="btn btn-warning mt-3 ">raybo.org/slides_handsonjs</div>
 <p class="small mt-5">
   <span class="badge bg-dark me-1 ms-2">t</span> toolbar
   <span class="badge bg-dark me-1 ms-2">m</span> menu
