--- a/src/footer.html
+++ b/src/footer.html
@@ -1,6 +1,6 @@
 <div class="persistent">
   <strong class="text-warning">Links:</strong>
-  <a class="text-decoration-none" href="https://raybo.org/slides_jsfunctions/#/">raybo.org/slides_jsfunctions</a>
+  <a class="text-decoration-none" href="https://raybo.org/slides_handsonjs/#/">raybo.org/slides_handsonjs</a>
   <a class="text-decoration-none" href="https://www.linkedin.com/learning/instructors/ray-villalobos">courses</a>
   <a class="text-decoration-none" href="https://raybo.org">blog</a> |
   <strong class="text-warning ml-1">Contact:</strong>
