--- a/src/site/slides/00_03/index.html
+++ b/src/site/slides/00_03/index.html
@@ -68,7 +68,7 @@
                       <i class="bi bi-file-text-fill me-2 lh-1" style="color: #8C6621;"></i>
                       <div class="d-flex flex-column lh-1">
                         <span class="fw-medium lh-1" style="color: #8C6621; font-size: .7em">01_01</span>
-                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">CodeSwing</span>
+                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">JSX</span>
                       </div>
                     </a>
                     <a class="flex-fill ms-3 text-end" style="color: #8C6621;" href="../../../?d=01_01&#">
@@ -291,14 +291,14 @@
           </aside>
         <main class="main col col-md-6 col-lg-8">
           <!-- .slide: data-state="layout-title" class="bg-dark"-->
-<h1 id="slides" tabindex="-1">Slides <a class="direct-link" href="#slides"> </a></h1>
+<h1 id="slides" tabindex="-1">Slides</h1>
 <div class="slide-link"><a href="https://go.raybo.org/2OXU"><i class="fab fa-slideshare"></i> go.raybo.org/2OXU</a></div>
 <blockquote>
 <blockquote></blockquote>
 </blockquote>
 <p>You can find all of the slides for this course at this URL.</p>
 <hr>
-<h1 id="slides-1" tabindex="-1">Slides <a class="direct-link" href="#slides-1"> </a></h1>
+<h1 id="slides-1" tabindex="-1">Slides</h1>
 <blockquote>
 <blockquote></blockquote>
 </blockquote>
