--- a/src/site/slides/01_02/index.html
+++ b/src/site/slides/01_02/index.html
@@ -68,7 +68,7 @@
                       <i class="bi bi-file-text-fill me-2 lh-1" style="color: #8C6621;"></i>
                       <div class="d-flex flex-column lh-1">
                         <span class="fw-medium lh-1" style="color: #8C6621; font-size: .7em">01_01</span>
-                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">CodeSwing</span>
+                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">JSX</span>
                       </div>
                     </a>
                     <a class="flex-fill ms-3 text-end" style="color: #8C6621;" href="../../../?d=01_01&#">
@@ -291,14 +291,14 @@
           </aside>
         <main class="main col col-md-6 col-lg-8">
           <!-- .slide: data-state="layout-title" class="bg-dark"-->
-<h1 id="mechanics-of-functions" tabindex="-1">Mechanics of Functions <a class="direct-link" href="#mechanics-of-functions"> </a></h1>
+<h1 id="mechanics-of-functions" tabindex="-1">Mechanics of Functions</h1>
 <div class="slide-link"><a href="https://go.raybo.org/9SaN"><i class="fab fa-slideshare"></i> go.raybo.org/9SaN</a></div>
 <blockquote>
 <blockquote></blockquote>
 </blockquote>
 <p>A function is a series of statements that are grouped together to perform specific tasks.</p>
 <hr>
-<h1 id="basics" tabindex="-1">Basics <a class="direct-link" href="#basics"> </a></h1>
+<h1 id="basics" tabindex="-1">Basics</h1>
 <pre><code class="language-js">function NAME(PARAMETERS,...) {
   STATEMENTS;...
   return VALUE;
@@ -320,7 +320,7 @@
 <p>You can then add a series of statements inside curly braces. Each of those statements is usually separated by semicolons.</p>
 <p>There's a special statement you can use inside a function to return a value when the function is executed.</p>
 <hr>
-<h1 id="starting-code" tabindex="-1">Starting Code <a class="direct-link" href="#starting-code"> </a></h1>
+<h1 id="starting-code" tabindex="-1">Starting Code</h1>
 <pre><code class="language-js">const $ = document.querySelector.bind(document)
 const output = 'Hello World'
 
@@ -347,7 +347,7 @@ console.log(output)
 <p>Then I'm using the innerHTML property to set the value of the element to our ouput variable. That's what writing the hello world to our page.</p>
 <p>The other and much simpler way to output things is to use the console.log command. This is great for demos, but most of the time when I'm coding, I'm doing things on the page, so I wanted to show you both options.</p>
 <hr>
-<h1 id="writing-a-function" tabindex="-1">Writing a Function <a class="direct-link" href="#writing-a-function"> </a></h1>
+<h1 id="writing-a-function" tabindex="-1">Writing a Function</h1>
 <pre><code class="language-js">function add(a, b) {
   const c = a + b
   return c
@@ -359,7 +359,7 @@ const output = add(2, 2)
 </blockquote>
 <p>Let's use CodeSpaces to try this out.</p>
 <hr>
-<h1 id="function-names" tabindex="-1">Function Names <a class="direct-link" href="#function-names"> </a></h1>
+<h1 id="function-names" tabindex="-1">Function Names</h1>
 <ul>
 <li>Case sensitive</li>
 <li>camelCase</li>
