--- a/src/site/slides/01_07/index.html
+++ b/src/site/slides/01_07/index.html
@@ -68,7 +68,7 @@
                       <i class="bi bi-file-text-fill me-2 lh-1" style="color: #8C6621;"></i>
                       <div class="d-flex flex-column lh-1">
                         <span class="fw-medium lh-1" style="color: #8C6621; font-size: .7em">01_01</span>
-                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">CodeSwing</span>
+                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">JSX</span>
                       </div>
                     </a>
                     <a class="flex-fill ms-3 text-end" style="color: #8C6621;" href="../../../?d=01_01&#">
@@ -291,14 +291,14 @@
           </aside>
         <main class="main col col-md-6 col-lg-8">
           <!-- .slide: data-state="layout-title" class="bg-dark"-->
-<h1 id="return" tabindex="-1">Return <a class="direct-link" href="#return"> </a></h1>
+<h1 id="return" tabindex="-1">Return</h1>
 <div class="slide-link"><a href="https://go.raybo.org/9Z0M"><i class="fab fa-slideshare"></i> go.raybo.org/9Z0M</a></div>
 <blockquote>
 <blockquote></blockquote>
 </blockquote>
 <p>Sometimes things that seem insignificant can be quite powerful and that's the case with the return statement.</p>
 <hr>
-<h1 id="return-1" tabindex="-1">Return <a class="direct-link" href="#return-1"> </a></h1>
+<h1 id="return-1" tabindex="-1">Return</h1>
 <pre><code class="language-js">function add(a, b) {
   return a+b
 }
@@ -309,7 +309,7 @@ console.log(add(2,2)) //4
 </blockquote>
 <p>Whenever you invoke a function, it's a bit like generating an equation. And equations have results. So, the basic job of the return statement is to return the result of the execution of the function.</p>
 <hr>
-<h1 id="expressions" tabindex="-1">Expressions <a class="direct-link" href="#expressions"> </a></h1>
+<h1 id="expressions" tabindex="-1">Expressions</h1>
 <pre><code class="language-js">function add(a, b) {
   return console.log('Success'),
     a+b
@@ -328,7 +328,7 @@ console.log(add(2,2))
 <p>When console.log calls the function, it only receives the result of the addition and it outputs that to the console.</p>
 <p>The key is to understand how each of these statements work. Don't worry, we'll get to some practice in a minute.</p>
 <hr>
-<h1 id="return-quirks" tabindex="-1">Return Quirks <a class="direct-link" href="#return-quirks"> </a></h1>
+<h1 id="return-quirks" tabindex="-1">Return Quirks</h1>
 <pre><code class="language-js">function add(a, b) {
   return
     console.log('Success'),
@@ -346,7 +346,7 @@ console.log(add(2,2))
 <p>One of the by-products of the return statement is that it stops the execution of the rest of the function, so the lines won't execute.</p>
 <p>So if you try this in CodeSpaces, you'll just get a value of undefined...everything after the return statement gets ignored.</p>
 <hr>
-<h1 id="return-quirks-1" tabindex="-1">Return Quirks <a class="direct-link" href="#return-quirks-1"> </a></h1>
+<h1 id="return-quirks-1" tabindex="-1">Return Quirks</h1>
 <pre><code class="language-js">function add(a, b) {
   return (
     console.log('Success'),
@@ -362,7 +362,7 @@ console.log(add(2,2))
 </blockquote>
 <p>To fix something like this, you'll often see a set of parenthesis added to return statements to prevent auto semicolon insertion from causing a problem.</p>
 <hr>
-<h1 id="multiple-returns" tabindex="-1">Multiple Returns <a class="direct-link" href="#multiple-returns"> </a></h1>
+<h1 id="multiple-returns" tabindex="-1">Multiple Returns</h1>
 <pre><code class="language-js">function add(a, b) {
  if (a&gt;b) { return a+b }
  else { return a-b }
@@ -376,7 +376,7 @@ console.log(add(3,2))// 5
 <p>You can have more than one return statement in a function so in this conditional statement, the operation will depend on the value of a and b.</p>
 <p>The function will return -1 and then 5.</p>
 <hr>
-<h1 id="no-returns" tabindex="-1">No Returns <a class="direct-link" href="#no-returns"> </a></h1>
+<h1 id="no-returns" tabindex="-1">No Returns</h1>
 <pre><code class="language-js">function add(a, b) {
   console.log(a + b)
 }
@@ -391,7 +391,7 @@ add(2,3)
 <p>Since we're putting the function in a console.log statement, that statement would output undefined.</p>
 <p>It's the same as writing a return statement without anything next to it. Sometimes you see that when you want the function to stop executing something.</p>
 <hr>
-<h1 id="returning-functions" tabindex="-1">Returning Functions <a class="direct-link" href="#returning-functions"> </a></h1>
+<h1 id="returning-functions" tabindex="-1">Returning Functions</h1>
 <pre><code class="language-js">function counter() {
   let number = 1
   return function() { console.log(number++) }
