--- a/src/site/slides/02_02/index.html
+++ b/src/site/slides/02_02/index.html
@@ -68,7 +68,7 @@
                       <i class="bi bi-file-text-fill me-2 lh-1" style="color: #8C6621;"></i>
                       <div class="d-flex flex-column lh-1">
                         <span class="fw-medium lh-1" style="color: #8C6621; font-size: .7em">01_01</span>
-                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">CodeSwing</span>
+                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">JSX</span>
                       </div>
                     </a>
                     <a class="flex-fill ms-3 text-end" style="color: #8C6621;" href="../../../?d=01_01&#">
@@ -291,14 +291,14 @@
           </aside>
         <main class="main col col-md-6 col-lg-8">
           <!-- .slide: data-state="layout-title" class="bg-dark"-->
-<h1 id="constructors" tabindex="-1">Constructors <a class="direct-link" href="#constructors"> </a></h1>
+<h1 id="constructors" tabindex="-1">Constructors</h1>
 <div class="slide-link"><a href="https://go.raybo.org/9dSO"><i class="fab fa-slideshare"></i> go.raybo.org/9dSO</a></div>
 <blockquote>
 <blockquote></blockquote>
 </blockquote>
 <p>You can create reusable objects in more than one way, so let's explore another popular pattern for creating them called the constructor.</p>
 <hr>
-<h1 id="new-keyword" tabindex="-1">New Keyword <a class="direct-link" href="#new-keyword"> </a></h1>
+<h1 id="new-keyword" tabindex="-1">New Keyword</h1>
 <pre><code class="language-js">let Dog = function() {
   let name;
 }
@@ -315,7 +315,7 @@ console.log(SecondDog) //{&quot;name&quot;:&quot;Pugsley&quot;}
 <p>Some things about this code. I used a capital letter for the name of the function. That's common when creating this pattern that acts like a class.</p>
 <p>There's also a keyword we hadn't seen before called new. That creates an instance of the object. Each instance has it's own set of properties.</p>
 <hr>
-<h1 id="the-prototype" tabindex="-1">The Prototype <a class="direct-link" href="#the-prototype"> </a></h1>
+<h1 id="the-prototype" tabindex="-1">The Prototype</h1>
 <pre><code class="language-js">let Dog = function() {
   let name;
 }
@@ -334,7 +334,7 @@ firstDog.speak('woof')
 <p>JavaScript objects have a special property called the prototype. If you've visited online documentation, you may have seen this keyword.</p>
 <p>This feature allows all objects to be extended. When we create our Dog class, we can target the prototype and add any number of features to that class. In this case, we're adding a speak function.</p>
 <hr>
-<h1 id="separate-function" tabindex="-1">Separate Function <a class="direct-link" href="#separate-function"> </a></h1>
+<h1 id="separate-function" tabindex="-1">Separate Function</h1>
 <pre><code class="language-js">let speak = function(what) {
   return (console.log(what));
 }
