--- a/src/site/slides/01_02/index.html
+++ b/src/site/slides/01_02/index.html
@@ -82,7 +82,7 @@
                       <i class="bi bi-file-text-fill me-2 lh-1" style="color: #8C6621;"></i>
                       <div class="d-flex flex-column lh-1">
                         <span class="fw-medium lh-1" style="color: #8C6621; font-size: .7em">01_02</span>
-                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">Mechanics of Functions</span>
+                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">Classes or Hooks</span>
                       </div>
                     </a>
                     <a class="flex-fill ms-3 text-end" style="color: #8C6621;" href="../../../?d=01_02&#">
@@ -96,7 +96,7 @@
                       <i class="bi bi-file-text-fill me-2 lh-1" style="color: #8C6621;"></i>
                       <div class="d-flex flex-column lh-1">
                         <span class="fw-medium lh-1" style="color: #8C6621; font-size: .7em">01_03</span>
-                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">Definition Expressions</span>
+                        <span class="fw-bold lh-1 text-white" style="font-family: Asap; font-size: 1.1em">Components with Hooks</span>
                       </div>
                     </a>
                     <a class="flex-fill ms-3 text-end" style="color: #8C6621;" href="../../../?d=01_03&#">
@@ -291,88 +291,90 @@
           </aside>
         <main class="main col col-md-6 col-lg-8">
           <!-- .slide: data-state="layout-title" class="bg-dark"-->
-<h1 id="mechanics-of-functions" tabindex="-1">Mechanics of Functions</h1>
-<div class="slide-link"><a href="https://go.raybo.org/9SaN"><i class="fab fa-slideshare"></i> go.raybo.org/9SaN</a></div>
+<h1 id="classes-or-hooks" tabindex="-1">Classes or Hooks</h1>
 <blockquote>
 <blockquote></blockquote>
 </blockquote>
-<p>A function is a series of statements that are grouped together to perform specific tasks.</p>
+<p>In React, you can reuse bits of code called components...using of two styles: classes and hooks. Let's take a look at the differences and why hooks are more dominant.</p>
 <hr>
-<h1 id="basics" tabindex="-1">Basics</h1>
-<pre><code class="language-js">function NAME(PARAMETERS,...) {
-  STATEMENTS;...
-  return VALUE;
-}
-</code></pre>
+<h1 id="components" tabindex="-1">Components</h1>
 <ul>
-<li>The <code>function</code> keyword</li>
-<li>Followed by a <code>name</code></li>
-<li>Optional <code>parameters</code></li>
-<li><code>Statements</code> in curly braces</li>
-<li><code>return</code> statement</li>
+<li>Reusable code</li>
+<li>Accept <code>props</code></li>
+<li>Return display</li>
 </ul>
 <blockquote>
 <blockquote></blockquote>
 </blockquote>
-<p>Regular functions are created using the <code>function</code> keyword.</p>
-<p>After this keyword, a name is given to the function. There are some specific rules. We'll talk about them in a bit.</p>
-<p>In Parenthesis, you can specify optional parameters. That means that you can pass values to the functions and those become variables inside the function.</p>
-<p>You can then add a series of statements inside curly braces. Each of those statements is usually separated by semicolons.</p>
-<p>There's a special statement you can use inside a function to return a value when the function is executed.</p>
+<p>Before we get into classes or hooks, lets define what a component is and does.</p>
+<p>Components are a way to create reusable code. Think of them like functions that are a bit more flexible.</p>
+<p>Components can accept any number of inputs called props</p>
+<p>and they return what will be displayed as part of your application.</p>
 <hr>
-<h1 id="starting-code" tabindex="-1">Starting Code</h1>
-<pre><code class="language-js">const $ = document.querySelector.bind(document)
-const output = 'Hello World'
-
-$('#output').innerHTML = output
-console.log(output)
-</code></pre>
-<p><a href="https://github.dev/LinkedInLearning/javascript-functions-2502735/tree/01_02b" target="_blank"><code class="code-royal">Try it</code></a></p>
-<blockquote>
-<blockquote></blockquote>
-</blockquote>
-<p>Let's use CodeSpaces to try this out.</p>
-<p>You'll notice that I've started you out with some code already. Let's talk about what that's setting up before we get into our function.</p>
-<p>I've set up two sample ways to output our code.</p>
-<pre><code class="language-js">const $ = document.querySelector.bind(document)
-const output = 'Hello World'
-
-$('#output').innerHTML = output
-console.log(output)
-</code></pre>
-<p>You can see that I'm setting up a dollar sign variable that gives JavaScript access to the document. It's really just a shortcut ot the DOM or document object model.</p>
-<p>Then I'm setting up a variable called output that I'm going to use to output the value.</p>
-<p>Using our dollar sign object, we can target an element in the HTML with an ID of output.</p>
-<p>The HTML for our page is in the canvas.html file, which you can get to in the explorer.</p>
-<p>Then I'm using the innerHTML property to set the value of the element to our ouput variable. That's what writing the hello world to our page.</p>
-<p>The other and much simpler way to output things is to use the console.log command. This is great for demos, but most of the time when I'm coding, I'm doing things on the page, so I wanted to show you both options.</p>
-<hr>
-<h1 id="writing-a-function" tabindex="-1">Writing a Function</h1>
-<pre><code class="language-js">function add(a, b) {
-  const c = a + b
-  return c
-}
-const output = add(2, 2)
-</code></pre>
-<blockquote>
-<blockquote></blockquote>
-</blockquote>
-<p>Let's use CodeSpaces to try this out.</p>
-<hr>
-<h1 id="function-names" tabindex="-1">Function Names</h1>
+<h1 id="class-components" tabindex="-1">Class Components</h1>
 <ul>
-<li>Case sensitive</li>
-<li>camelCase</li>
-<li>Descriptive verbs</li>
+<li>Object syntax</li>
+<li>Still valid</li>
+<li>Harder to write</li>
 </ul>
 <blockquote>
 <blockquote></blockquote>
 </blockquote>
-<p>A couple of suggestions for naming functions.</p>
-<p>First, be careful that variable names are case sensitive, so uppercase A in Add is differen than lowercase add</p>
-<p>Typically function names are written in camelCase, First letter lowercase if the name has another word, it's in uppercase</p>
-<p>Try to use descriptive verbs. I could have called my function addNumbers, but add is short enough.</p>
-<p>By the way writing the function is called declaring the function, and using the function is called invoking the function, but things get really interesting when we dive into how this works, so lets keep going.</p>
+<p>React has been around for quite a while and until recently, its exclusively used the object syntax to create components.</p>
+<p>It's something that's fallen out of favor, but is still valid, but it's less familiar to modern developers.</p>
+<hr>
+<h1 id="class-component" tabindex="-1">Class Component</h1>
+<pre><code class="language-jsx">import React, { Component } from &quot;react&quot;;
+
+class Welcome extends React.Component {
+  constructor() {
+    super();
+  }
+  render() {
+    return &lt;h1&gt;Meet the StarGazers&lt;/h1&gt;;
+  }
+}
+</code></pre>
+<blockquote>
+<blockquote></blockquote>
+</blockquote>
+<p>This is a basic class based components. Let's jump into our code.</p>
+<p>It might look familiar if you're used to writing Class based JavaScript.</p>
+<p>In order to use components, we import the React object and the component object from the React library.</p>
+<p>Next we start by declaring a Class. Class names are always capitalized.</p>
+<p>Next we use the class to extend the functionality of a React component.</p>
+<p>We then use a special function called a constructor. The job of the constructor is to initialize the instance of the class when it is used.</p>
+<p>Then we get into the render statement, where you output what you want React to show.</p>
+<p>That seems like a lot for a simple component and that's the way components worked for a long time.</p>
+<hr>
+<h1 id="passing-props" tabindex="-1">Passing Props</h1>
+<pre><code class="language-jsx">class Welcome extends React.Component {
+  constructor(props) {
+    super(props);
+  }
+  render() {
+    return &lt;h1&gt;Meet the &lt;i&gt;{this.props.name}&lt;/i&gt;&lt;/h1&gt;
+  }
+}
+</code></pre>
+<blockquote>
+<blockquote></blockquote>
+</blockquote>
+<p>A component that just prints out some HTML is pretty useles, so let's take a look at how we can make it accept a parameter, like you would a function.</p>
+<p>To do that, we can pass along props, or properties to the component, just like we would with a regular HTML tag.</p>
+<p>In our return statement, we can use the this keyword to target the props we receive in the constructor and then display our name.</p>
+<hr>
+<h1 id="hooks" tabindex="-1">Hooks</h1>
+<pre><code class="language-jsx">const Welcome = (props) =&gt; {
+  return (
+    &lt;h1&gt;Meet the &lt;i&gt;{props.name}&lt;/i&gt;&lt;/h1&gt;
+  )
+}
+</code></pre>
+<blockquote>
+<blockquote></blockquote>
+</blockquote>
+<p>Hooks allow you to use the function syntax you already know to create componets. Let's take a look at how you would use them to create this component. You'll see that it's a lot simpler.</p>
 
         </main>
         <aside class="aside aside-supplemental col col-md-3 col-lg-2 d-none d-md-block">
@@ -381,19 +383,22 @@ const output = add(2, 2)
             <div class="">
                 <ol>
                     
-                    <li><a href="#mechanics-of-functions">Mechanics of Functions</a>
+                    <li><a href="#classes-or-hooks">Classes or Hooks</a>
             		</li>
 
-                    <li><a href="#basics">Basics</a>
+                    <li><a href="#components">Components</a>
             		</li>
 
-                    <li><a href="#starting-code">Starting Code</a>
+                    <li><a href="#class-components">Class Components</a>
             		</li>
 
-                    <li><a href="#writing-a-function">Writing a Function</a>
+                    <li><a href="#class-component">Class Component</a>
             		</li>
 
-                    <li><a href="#function-names">Function Names</a>
+                    <li><a href="#passing-props">Passing Props</a>
+            		</li>
+
+                    <li><a href="#hooks">Hooks</a>
             		</li>
                 </ol>
             </div>
